--- a/gourmetclub.conf
+++ b/gourmetclub.conf
@@ -21,5 +21,14 @@ name GourmetClub
                 id_field mail
             </store>
         </members>
+        <admin>
+            <credential>
+                class HTTP
+                type basic
+                password_type salted_hash
+                password_salt_len 4
+                password_field password
+            </credential>
+        </admin>
     </realms>
 </Plugin::Authentication>
