--- a/gourmetclub_local.conf
+++ b/gourmetclub_local.conf
@@ -2,4 +2,17 @@
 connect_info dbi:mysql:gourmetclub
 connect_info root
 </Model::DBIC>
-
+<Plugin::Authentication>
+    <realms>
+        <admin>
+            <store>
+                class Minimal
+                <users>
+                    <danjou>
+                        password {SSHA}kPrK7wUazH6/e517/ufzYFbo2W7C9PPU
+                    </danjou>
+                </users>
+            </store>
+        </admin>
+    </realms>
+</Plugin::Authentication>
