TheSchwartz worker script

--- a/gourmetclub.conf
+++ b/gourmetclub.conf
@@ -32,3 +32,11 @@ name GourmetClub
         </admin>
     </realms>
 </Plugin::Authentication>
+<Model::TheSchwartz>
+    <databases>
+        dsn dbi:mysql:theschwartz
+    </databases>
+</Model::TheSchwartz>
+<Model::DBIC>
+    connect_info dbi:mysql:gourmetclub
+</Model::DBIC>
