--- a/gourmetclub_local.conf
+++ b/gourmetclub_local.conf
@@ -1,7 +1,12 @@
 <Model::DBIC>
-connect_info dbi:mysql:gourmetclub
-connect_info root
+    connect_info dbi:mysql:gourmetclub
+    connect_info root
 </Model::DBIC>
+<Model::TheSchwartz>
+    <databases>
+        user root
+    </databases>
+</Model::TheSchwartz>
 <Plugin::Authentication>
     <realms>
         <admin>
