render email with TTMail and send it

--- a/gourmetclub.conf
+++ b/gourmetclub.conf
@@ -1,6 +1,7 @@
 # rename this file to GourmetClub.yml and put a : in front of "name" if
 # you want to use yaml like in old versions of Catalyst
 name GourmetClub
+default_view TTSite
 <session>
     dbic_class DBIC::Session
     expires 3600
@@ -40,3 +41,21 @@ name GourmetClub
 <Model::DBIC>
     connect_info dbi:mysql:gourmetclub
 </Model::DBIC>
+<View::Email::Template>
+    stash_key email
+    template_prefix email
+    <default>
+        content_type text/plain
+        charset iso-2022-jp
+        view TTMail
+    </default>
+    <sender>
+        mailer GourmetClub::Util::Mailer
+        <mailer_args>
+            <databases>
+                dsn dbi:mysql:theschwartz
+                user root
+            </databases>
+        </mailer_args>
+    </sender>
+</View::Email::Template>
