validation, invitation mail

--- a/gourmetclub.conf
+++ b/gourmetclub.conf
@@ -2,6 +2,9 @@
 # you want to use yaml like in old versions of Catalyst
 name GourmetClub
 default_view TTSite
+<validator>
+    profiles __path_to(profiles.yml)__
+</validator>
 <session>
     dbic_class DBIC::Session
     expires 3600
@@ -41,7 +44,7 @@ default_view TTSite
 <Model::DBIC>
     connect_info dbi:mysql:gourmetclub
 </Model::DBIC>
-<View::Email::Template>
+<View::Email::TemplateEntity>
     stash_key email
     template_prefix email
     <default>
