--- a/gourmetclub_local.conf
+++ b/gourmetclub_local.conf
@@ -8,7 +8,13 @@
     </databases>
 </Model::TheSchwartz>
 <Plugin::Authentication>
+    default_realm members
     <realms>
+        <members>
+            <credential>
+                password_pre_salt soffritto
+            </credential>
+        </members>
         <admin>
             <store>
                 class Minimal
