mv controller Member to Account

--- a/gourmetclub.conf
+++ b/gourmetclub.conf
@@ -7,6 +7,7 @@ default_view TTSite
 </validator>
 <session>
     dbic_class DBIC::Session
+    data_field session_data
     expires 3600
 </session>
 <Plugin::Authentication>
@@ -44,7 +45,7 @@ default_view TTSite
 <Model::DBIC>
     connect_info dbi:mysql:gourmetclub
 </Model::DBIC>
-<View::Email::TemplateEntity>
+<View::Email>
     stash_key email
     template_prefix email
     <default>
