--- a/t/config/gourmetspot.yml
+++ b/t/config/gourmetspot.yml
@@ -48,8 +48,8 @@ View::Email:
         mailer: GourmetSpot::Util::Mailer
         mailer_args: 
             databases: 
-                - dsn: dbi:mysql:theschwartz
-                  user: root
+                dsn: dbi:mysql:theschwartz
+                user: root
     stash_key: email
     template_prefix: email
 View::JSON: 
